[tool.poetry]
name = "gbrl_sb3"
version = "1.1.0"
description = "Gradient Boosting Reinforcement Learning for stable_baselines3"
authors = [
    "Benjamin Fuhrer <bfuhrer@nvidia.com>",
    "Chen Tessler <ctessler@nvidia.com>",
    "Gal Dalal <galal@nvidia.com>",
]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
gymnasium = {version = "0.29.1", extras = ["atari", "accept-rom-license", "box2d"]}
numpy = "^1.21,<1.25"
PyYAML = "6.0.1"
rl_zoo3 = "2.1.0"
stable-baselines3 = "2.1.0"
wandb = "0.16.0"
torch = ">=2.6.0"
mujoco-py = "2.1.2.14"
minigrid = "2.3.1"
opencv-python = ">=4.8.1.78"
tensorboard = "2.15.1"
gbrl = "1.0.7"
jinja2 = ">=3.1.6"
Werkzeug = ">=3.1.3"
setuptools = ">=78.1.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"



